--- a/options.html
+++ b/options.html
@@ -27,7 +27,11 @@
         </div>
 
         <label for="apiUrl">URL da API</label>
-        <input type="url" id="apiUrl" placeholder="http://localhost:8787/api/analisar" />
+        <input
+          type="url"
+          id="apiUrl"
+          placeholder="https://veredicto.up.railway.app/api/analisar"
+        />
       </section>
 
       <section class="card">
