--- a/popup.html
+++ b/popup.html
@@ -232,6 +232,14 @@
     <section class="actions">
       <button id="analyze" class="primary">Analisar</button>
       <button id="copy-report" class="ghost">Copiar</button>
+      <button id="share-toggle" class="ghost" type="button" disabled>Compartilhar</button>
+    </section>
+
+    <section id="share-panel" class="share-panel" aria-hidden="true">
+      <button class="share-btn" data-share="whatsapp" type="button">WhatsApp</button>
+      <button class="share-btn" data-share="telegram" type="button">Telegram</button>
+      <button class="share-btn" data-share="twitter" type="button">Twitter</button>
+      <button class="share-btn" data-share="instagram" type="button">Instagram</button>
     </section>
 
     <div id="status" class="status"></div>
