--- a/options.html
+++ b/options.html
@@ -30,7 +30,7 @@
         <input
           type="url"
           id="apiUrl"
-          placeholder="https://veredicto.up.railway.app/api/analisar"
+          placeholder="http://localhost:8787/api/analisar"
         />
 
         <label for="apiToken">Token da API (opcional)</label>
